# pioneer

./: .gitignore  ARCHITECTURE.md  FULL_SYSTEM_TESTING.md  README.md  TODO.md  check_camera_status.sh  check_ros_topics.sh  check_system.sh  create_foxmq_user.sh  create_foxmq_user_manual.py  launch_multi_robot.sh  launch_with_ros2.sh  monitor_mqtt.sh  monitor_mqtt_formatted.sh  monitor_mqtt_stats.sh  notes.txt  pioneer_spatial_analysis.rviz  print_robot_odom.py  print_robot_odom.sh  quick_mqtt_monitor.sh  start_foxmq_cluster.sh  start_full_system.sh  start_pioneer.sh  start_supervisor_node.sh  stop_full_system.sh  stop_mosquitto.sh  test_mqtt_connection.sh  view_camera.sh
bkp/: controller.c
controllers/controller/: Makefile  controller  controller.c
controllers/supervisor/: Makefile  supervisor  supervisor.c
ros2_integration/: IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  WORLD_FILE_UPDATE.md
ros2_ws/src/pioneer_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pioneer_msgs/msg/: ConsensusMessage.msg  MissionStatus.msg  TerritoryAssignment.msg
ros2_ws/src/pioneer_msgs/resource/: pioneer_msgs
ros2_ws/src/pioneer_path_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/pioneer_path_planner/pioneer_path_planner/: __init__.py  a_star_planner.py  collision_avoidance_node.py  consensus_handler_node.py  frontier_detector_node.py  goal_selector_node.py  mission_coordinator_node.py  object_detection_node.py  occupancy_grid_builder_node.py  path_follower_node.py  path_planner_node.py  spatial_analysis_visualizer_node.py  verification_coordinator_node.py
ros2_ws/src/pioneer_path_planner/resource/: pioneer_path_planner
ros2_ws/src/pioneer_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/pioneer_ros2/launch/: foxmq_bridge.launch.py  spatial_analysis.launch.py  supervisor.launch.py
ros2_ws/src/pioneer_ros2/pioneer_ros2/: __init__.py  aggregator_node.py  camera_bridge_node.py  cmd_vel_bridge_node.py  foxmq_bridge_node.py  lidar_bridge_node.py  supervisor_node.py
worlds/: .pioneer_world.wbproj  pioneer_world.wbt
